--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "@types/node": "^16.18.97",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "ember-tsparticles": "^1.0.0",
+    "fs": "^0.0.1-security",
+    "html-react-parser": "^5.1.10",
+    "node": "^20.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-particles": "^2.12.2",
     "react-scripts": "5.0.1",
+    "riot-particles": "^2.9.3",
+    "tsparticles-slim": "^2.12.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
