--- a/package.json
+++ b/package.json
@@ -1,50 +1,55 @@
 {
-  "name": "testcasegptstarter",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.97",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "ember-tsparticles": "^1.0.0",
-    "fs": "^0.0.1-security",
-    "html-react-parser": "^5.1.10",
-    "node": "^20.14.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-particles": "^2.12.2",
-    "react-scripts": "5.0.1",
-    "riot-particles": "^2.9.3",
-    "tsparticles-slim": "^2.12.0",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "testcasegptstarter",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@testing-library/jest-dom": "^5.17.0",
+		"@testing-library/react": "^13.4.0",
+		"@testing-library/user-event": "^13.5.0",
+		"@types/jest": "^27.5.2",
+		"@types/node": "^16.18.97",
+		"@types/react": "^18.3.3",
+		"@types/react-dom": "^18.3.0",
+		"ember-tsparticles": "^1.0.0",
+		"fs": "^0.0.1-security",
+		"html-react-parser": "^5.1.10",
+		"node": "^20.14.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-particles": "^2.12.2",
+		"react-scripts": "5.0.1",
+		"riot-particles": "^2.9.3",
+		"tsparticles-slim": "^2.12.0",
+		"typescript": "^4.9.5",
+		"web-vitals": "^2.1.4"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"rules": {
+			"no-useless-concat": "off",
+			"no-unused-vars": "off",
+			"no-self-assign": "off"
+		},
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
